# cc_loc_tool

./: .gitattributes  Cargo.toml  PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
.trae/documents/: complexity_optimization_plan.md  copy_function_signature_plan.md  memory_optimization_plan.md  next_steps_plan.md  upgrade_gpui_dependencies.md
src/: cli.rs  cli_main.rs  config.rs  export.rs  history.rs  language.rs  lib.rs  main.rs
src/complexity/: cyclomatic.rs  function_stats.rs  metrics.rs  mod.rs
src/loc/: counter.rs  mod.rs  scanner.rs
src/ui/: mod.rs  state.rs  view.rs
