[package]
name = "cc_loc_tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cc_loc_tool"
path = "src/main.rs"

[[bin]]
name = "cc_loc_cli"
path = "src/cli_main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.38"
csv = "1.3.0"
dirs = "5.0.1"
encoding_rs = "0.8.35"
gpui = "0.2.2"
gpui-component = "0.4.1"
gpui-component-assets = "0.4.1"
html-escape = "0.2.13"
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.11"
walkdir = "2.5.0"
